# nebius-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: security_audit.sh
src/nebius_mcp/: __init__.py  audit.py  auth.py  client.py  confirm.py  errors.py  manifest.py  operation.py  pagination.py  sanitize.py  server.py  validation.py
src/nebius_mcp/tools/: __init__.py  _ops_helpers.py  ai.py  compute.py  iam.py  k8s.py  ops.py  registry.py  secrets.py  vpc.py
tests/unit/: test_auth.py  test_check_environment.py  test_confirm.py  test_destructive_flow.py  test_manifest.py  test_sanitize.py  test_server.py  test_tools_compute.py  test_tools_iam.py  test_validation.py
