[project]
name = "nebius-mcp"
version = "0.1.0"
description = "MCP server for Nebius Cloud — exposes compute, mk8s, AI Endpoints, VPC, registry, IAM, and secrets to LLM clients."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "opencolin" }]
requires-python = ">=3.11"
keywords = ["mcp", "nebius", "llm", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.2.4,<4.0",
    "nebius>=0.3.63,<0.4",
    "pydantic>=2.13.0,<3.0",
    "structlog>=25.5.0,<26.0",
]

[project.urls]
Repository = "https://github.com/opencolin/nebius-mcp"
Issues = "https://github.com/opencolin/nebius-mcp/issues"

[project.scripts]
nebius-mcp = "nebius_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "S",        # bandit (security)
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "S101",  # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["nebius.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
